; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_timeout.c_timeouts_open.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_timeout.c_timeouts_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeouts = type { i32 }

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.timeouts* @timeouts_open(i32* %0) #0 {
  %2 = alloca %struct.timeouts*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.timeouts*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call %struct.timeouts* @lwan_aligned_alloc(i32 4, i32 64)
  store %struct.timeouts* %5, %struct.timeouts** %4, align 8
  %6 = icmp ne %struct.timeouts* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.timeouts*, %struct.timeouts** %4, align 8
  %9 = call %struct.timeouts* @timeouts_init(%struct.timeouts* %8)
  store %struct.timeouts* %9, %struct.timeouts** %2, align 8
  br label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @errno, align 4
  %12 = load i32*, i32** %3, align 8
  store i32 %11, i32* %12, align 4
  store %struct.timeouts* null, %struct.timeouts** %2, align 8
  br label %13

13:                                               ; preds = %10, %7
  %14 = load %struct.timeouts*, %struct.timeouts** %2, align 8
  ret %struct.timeouts* %14
}

declare dso_local %struct.timeouts* @lwan_aligned_alloc(i32, i32) #1

declare dso_local %struct.timeouts* @timeouts_init(%struct.timeouts*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
